--- a/MMM-Trains-Trafikverket.css
+++ b/MMM-Trains-Trafikverket.css
@@ -1,10 +1,3 @@
-/*
- *
- * Module: Trains Trafikverket
- *
- * By Per Gärden, per.garden@avaloninnovation.com
- * MIT Licensed.
- *
- * Custom here your css module
- *
- */
+.MMM-Trains-Trafikverket .delayed {
+	color: #F0AD4e
+}
